--- a/package.json
+++ b/package.json
@@ -1,114 +1,10 @@
-// api/parse-event.js
-// Live LLM-powered parser for calendar events using OpenAI.
-// Vercel Node.js Function (Request/Response via fetch).
-
-function buildHeaders() {
-  return {
-    "Content-Type": "application/json",
-    "Access-Control-Allow-Origin": "*",
-    "Access-Control-Allow-Methods": "POST, OPTIONS",
-    "Access-Control-Allow-Headers": "Content-Type"
-  };
+{
+  "name": "ai-calendar-copilot-api",
+  "version": "1.0.0",
+  "description": "Backend API for AI Calendar Copilot",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"No tests yet\""
+  },
+  "license": "MIT"
 }
-
-export default {
-  async fetch(request) {
-    const headers = buildHeaders();
-
-    // Handle CORS
-    if (request.method === "OPTIONS") {
-      return new Response(null, { status: 204, headers });
-    }
-
-    if (request.method !== "POST") {
-      return new Response(
-        JSON.stringify({ error: "Only POST is supported" }),
-        { status: 405, headers }
-      );
-    }
-
-    let text = "";
-    try {
-      const body = await request.json();
-      text = typeof body.text === "string" ? body.text : "";
-    } catch (err) {
-      return new Response(
-        JSON.stringify({ error: "Invalid JSON", details: String(err) }),
-        { status: 400, headers }
-      );
-    }
-
-    if (!process.env.OPENAI_API_KEY) {
-      return new Response(
-        JSON.stringify({ error: "Missing OPENAI_API_KEY" }),
-        { status: 500, headers }
-      );
-    }
-
-    // ---- LLM CALL START ----------------------------------------------------
-    let parsed = null;
-
-    try {
-      const openaiRes = await fetch(
-        "https://api.openai.com/v1/chat/completions",
-        {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-            Authorization: `Bearer ${process.env.OPENAI_API_KEY}`
-          },
-          body: JSON.stringify({
-            model: "gpt-4o-mini",    // safe, cheap, good structure
-            messages: [
-              {
-                role: "system",
-                content: `
-You parse natural language into structured calendar event JSON.
-Return *only* valid JSON, no explanation.
-
-Fields to extract:
-- title (string)
-- date (YYYY-MM-DD or null if unknown)
-- time (HH:mm 24h or null if unknown)
-- durationMinutes (integer or null)
-- guests: array of { name, email } (email may be null)
-- description (string or null)
-- originalText (string)
-`
-              },
-              {
-                role: "user",
-                content: text
-              }
-            ],
-            temperature: 0
-          })
-        }
-      );
-
-      const result = await openaiRes.json();
-
-      // The model returns a JSON string — parse it.
-      const raw = result.choices?.[0]?.message?.content || "{}";
-      parsed = JSON.parse(raw);
-
-    } catch (err) {
-      return new Response(
-        JSON.stringify({
-          error: "LLM parsing failed",
-          details: String(err)
-        }),
-        { status: 500, headers }
-      );
-    }
-    // ---- LLM CALL END ------------------------------------------------------
-
-    // Add the original text as fallback
-    parsed.originalText = text;
-
-    return new Response(JSON.stringify(parsed, null, 2), {
-      status: 200,
-      headers
-    });
-  }
-};
